--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -1,5 +1,11 @@
 {
   "compilerOptions": {
+    "baseUrl": "../",
+    "paths": {
+      "@/*": ["./client/src/*"],
+      "@shared/*": ["./server/src/shared/*"]
+    },
+
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2022",
     "useDefineForClassFields": true,
