--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^17.0.19",
     "create-react-app": "^5.0.1",
     "nodemon": "^2.0.15",
+    "ts-node": "^10.9.2",
     "webpack": "^5.68.0"
   }
 }
